--- a/react-express-mongodb/compose.yaml
+++ b/react-express-mongodb/compose.yaml
@@ -1,6 +1,8 @@
 services:
   frontend:
     build: frontend
+    labels:
+      shipyard.route: '/'
     ports:
       - 3000:3000
     stdin_open: true
